<resources>
    <string name="app_name">Calculator</string>
    <string name="second_number">Enter second number</string>
    <string name="first_number">Enter first number...</string>
    <string name="add_button">Add</string>
    <string name="subtract_button">Subtract</string>
    <string name="multiply_button">multiply</string>
    <string name="power">Power</string>
    <string name="divide_button">Divide</string>
    <string name="outcome_label">The answer, monkey-brain.</string>
</resources>
