<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codeclan.example.calculator.CalculatorActivity">

    <EditText
        android:id="@+id/first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:paddingBottom="50dp"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/second_number"
        android:paddingBottom="50dp"
        android:inputType="number"
        />

    <Button
        android:id="@+id/add_button"
        android:onClick="onCalcButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        />

    <Button
        android:id="@+id/subtract_button"
        android:onClick="onCalcButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract_button"
        />

    <Button
        android:id="@+id/multiply_button"
        android:onClick="onCalcButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply_button"
        />

    <Button
        android:id="@+id/divide_button"
        android:onClick="onClickDivideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide_button"
        />

    <Button
        android:id="@+id/power_button"
        android:onClick="onCalcButtonClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power"
        />
</LinearLayout>
